# Epilog

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  before_epilog_demo.py  cookie_popup_demo.py  docker-compose.yml  login_wall_demo.py  package-lock.json  patient_agent.py  paywall_demo.py  pyproject.toml  real_demo_agent.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
epilog/: __init__.py
epilog-web/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json
epilog-web/src/app/: globals.css  layout.tsx  page.tsx
epilog-web/src/components/: providers.tsx
epilog-web/src/lib/: api.ts
epilog/api/: __init__.py  dependencies.py  main.py  schemas.py
epilog/api/endpoints/: __init__.py  traces.py
epilog/api/services/: patch_applier.py
epilog/api/services/diagnosis/: __init__.py  engine.py  gemini_provider.py  provider.py
epilog/db/: __init__.py  models.py  session.py
epilog/sdk/: __init__.py  callback_handler.py  client.py  screenshot.py
tests/: test_callback_handler.py  test_diagnosis_service.py  test_integration.py  test_screenshot.py  test_sse_manual.py
