[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epilog"
version = "0.1.0"
description = "AI agent observability and debugging platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Epilog Team"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "langchain-core>=0.3.0",
    "pillow>=10.0.0",
    "playwright>=1.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
    "pytest-timeout>=2.3.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["epilog"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
